# nand2tetris

./: .gitignore
projects/01/: DMux4Way.hdl  DMux8Way.hdl  Mux4Way16.hdl  Xor.hdl
projects/02/: ALU.hdl  FullAdder.hdl  Inc16.hdl  Or16Way.hdl
projects/03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
projects/03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
projects/04/fill/: Fill.asm
projects/04/mult/: mult.asm
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl  Mux4Way.hdl  Mux8Way.hdl
projects/06/compiler/: .gitignore  meson.build
projects/06/compiler/include/: ast.hpp  context.hpp  first_pass_visitor.hpp  hack_visitor.hpp  parser.hpp  pass.hpp  reporter.hpp  token.hpp  tokenizer.hpp  visitor.hpp
projects/06/compiler/src/: main.cpp  meson.build
projects/06/compiler/test/: ast.cpp  first_pass_visitor_test.cpp  meson.build  tokenizer.cpp  visitor.cpp
projects/06/compiler/test/include/: mock_context.hpp  mock_reporter.hpp
